[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.1", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.3.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-usb-logger = { version = "0.2.0", path = "../embassy/embassy-usb-logger" }

smart-leds = "0.4.0"
heapless = "0.8"

defmt = "0.3"
defmt-rtt = "0.4"
log = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "ws2812"
harness = false

[[bin]]
name = "lcd"
harness = false
